// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrevNext should render 1`] = `
<DocumentFragment>
  <div
    class="mt-4 flex laptop:justify-between laptop:space-x-4 desktop:space-x-0"
  >
    <div
      class="w-full desktop:w-80 hidden laptop:block"
    />
    <div
      class="w-full desktop:w-80"
    >
      <a
        class="flex items-center justify-between rounded bg-secondary-700 p-4 font-semibold transition hover:bg-secondary-800 flex-row-reverse"
        href="/last"
      >
        <div
          class="flex text-secondary-200 ml-4 rotate-180"
        >
          <svg
            height="24"
            viewBox="0 0 64 64"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.15.5 4 6.65a.48.48 0 0 0 0 .7l6.15 6.15"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              transform="rotate(.045) scale(4.57143)"
            />
          </svg>
        </div>
        <div
          class="flex flex-col space-y-1 items-start"
        >
          <span
            class="text-sm text-secondary-200"
          >
            Next
          </span>
          <span
            class="text-base text-white"
          >
            Last
          </span>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PrevNext should render 2`] = `
<DocumentFragment>
  <div
    class="mt-4 flex laptop:justify-between laptop:space-x-4 desktop:space-x-0"
  >
    <div
      class="w-full desktop:w-80 hidden laptop:block"
    >
      <a
        class="flex items-center justify-between rounded bg-secondary-700 p-4 font-semibold transition hover:bg-secondary-800 flex-row text-right"
        href="/first"
      >
        <div
          class="flex text-secondary-200 mr-4"
        >
          <svg
            height="24"
            viewBox="0 0 64 64"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.15.5 4 6.65a.48.48 0 0 0 0 .7l6.15 6.15"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              transform="rotate(.045) scale(4.57143)"
            />
          </svg>
        </div>
        <div
          class="flex flex-col space-y-1 items-end"
        >
          <span
            class="text-sm text-secondary-200"
          >
            Prev
          </span>
          <span
            class="text-base text-white"
          >
            First
          </span>
        </div>
      </a>
    </div>
    <div
      class="w-full desktop:w-80"
    >
      <a
        class="flex items-center justify-between rounded bg-secondary-700 p-4 font-semibold transition hover:bg-secondary-800 flex-row-reverse"
        href="/last"
      >
        <div
          class="flex text-secondary-200 ml-4 rotate-180"
        >
          <svg
            height="24"
            viewBox="0 0 64 64"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.15.5 4 6.65a.48.48 0 0 0 0 .7l6.15 6.15"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              transform="rotate(.045) scale(4.57143)"
            />
          </svg>
        </div>
        <div
          class="flex flex-col space-y-1 items-start"
        >
          <span
            class="text-sm text-secondary-200"
          >
            Next
          </span>
          <span
            class="text-base text-white"
          >
            Last
          </span>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PrevNext should render 3`] = `
<DocumentFragment>
  <div
    class="mt-4 flex laptop:justify-between laptop:space-x-4 desktop:space-x-0"
  >
    <div
      class="w-full desktop:w-80 hidden laptop:block"
    >
      <a
        class="flex items-center justify-between rounded bg-secondary-700 p-4 font-semibold transition hover:bg-secondary-800 flex-row text-right"
        href="/first"
      >
        <div
          class="flex text-secondary-200 mr-4"
        >
          <svg
            height="24"
            viewBox="0 0 64 64"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.15.5 4 6.65a.48.48 0 0 0 0 .7l6.15 6.15"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              transform="rotate(.045) scale(4.57143)"
            />
          </svg>
        </div>
        <div
          class="flex flex-col space-y-1 items-end"
        >
          <span
            class="text-sm text-secondary-200"
          >
            Prev
          </span>
          <span
            class="text-base text-white"
          >
            First
          </span>
        </div>
      </a>
    </div>
    <div
      class="w-full desktop:w-80"
    />
  </div>
</DocumentFragment>
`;
